# MIIGAIK-Informatics

./: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  module.cpp
Cpp/: .gitignore
Cpp/Classworks/Classword_6/: CMakeLists.txt  task_1.cpp  task_2.cpp
Cpp/Classworks/Classwork_1/: CMakeLists.txt  task_1.cpp  task_2.cpp
Cpp/Classworks/Classwork_2/: .gitignore  CMakeLists.txt  task_3.cpp  task_4.cpp
Cpp/Classworks/Classwork_3/: .gitignore  CMakeLists.txt  task_3.cpp
Cpp/Classworks/Classwork_4/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp
Cpp/Classworks/Classwork_5/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp
Cpp/Classworks/Practice_3/: CMakeLists.txt  task_3.cpp
Cpp/Classworks/Practice_5/: CMakeLists.txt  task_1.cpp  task_2.cpp
Cpp/Classworks/Practice_6/: CMakeLists.txt  task_1.cpp  task_2.cpp
Cpp/Hometasks/Homework_1/: .gitignore  CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_5.cpp
Cpp/Hometasks/Homework_2/: CMakeLists.txt  find_factorial_num.cpp  reverse_string.cpp
Cpp/Hometasks/Homework_3/: CMakeLists.txt  queue.cpp
Cpp/Hometasks/Homework_4/: CMakeLists.txt  task_1.cpp  task_2.cpp  task_3.cpp  task_4.cpp  task_5.cpp
Cpp/Hometasks/Practice_3/: CMakeLists.txt  task_4.cpp
Cpp/Hometasks/Practice_4/: CMakeLists.txt  prime_number.cpp
Cpp/Hometasks/Practice_6/: CMakeLists.txt  counting_vowels.cpp  leap_year.cpp  multiplication_table.cpp
Cpp/MIIGAIK/: CMakeLists.txt
Files/Hometasks/: Анализ структур данных. Домашняя работа по Информатике. 02.11.23.docx  Тестирование Testing Challenge #1 - web testing.xlsx
(+6 files in other folders)
