cmake_minimum_required(VERSION 3.26)
project(Homework_2)

set(CMAKE_CXX_STANDARD 23)

add_executable(1 multiplication_table.cpp)
add_executable(2 find_factorial_num.cpp)
add_executable(3 prime_number.cpp)
add_executable(4 leap_year.cpp)
add_executable(5 reverse_string.cpp)
add_executable(6 counting_vowels.cpp)
